<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.allo.screeninfo.size.SizeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/text_100dp_height"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/text_200dp_height"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/text_300dp_height"
        android:textColor="@color/white" />

</LinearLayout>
